Fixed todo input width on small devices

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ form button:hover {
 
 @media (max-width: 576px) {
 	.todo-input {
+		max-width: 85%;
 		font-size: 1.5rem;
 	}	
 }
